# GeforceTempMonitor

./: README.md  pyproject.toml
geforce_temp_monitor/: __init__.py  monitor.py
